# Paco-Music-Player

./: CMakeLists.txt  README.md
docs/: layout.aseprite  layout.rgl
src/: CMakeLists.txt  dynamic_array.h  gui.c  gui.h  interface.c  interface.h  main.c  music_player.c  music_player.h  tracks.c  tracks.h
src/filesystem/: CMakeLists.txt  filesystem.c  filesystem.h
test/: CMakeLists.txt  track_test.cpp
tests/: CMakeLists.txt
tests/filesystem/: filesystem_tests.cpp
tests/test_example/: example_tests.cpp
